added containers and google font, fixed contact

--- a/about.html
+++ b/about.html
@@ -24,14 +24,12 @@
       </div>
     </div>
 
-    <div class="jumbotron">
       <div class="container">
         <h1>About Texas Beta</h1>
         <p>As the Christmas holidays approached in 1848, the atmosphere on the Miami campus in Oxford, Ohio was gloomy and uncertain. This was the mood in which Robert Morrison suggested to a close friend and classmate, John McMillan Wilson, that they consider putting together a new collegiate brotherhood. From this elemental beginning, Phi Delta Theta evolved into the positive international force for good it has become over the past 159 years.</p>
       </div>
-    </div> 
 
-
+<div class="container">
 		<div class="row">
 	      <div class="col-md-4">
 			<h3>Friendship</h3>
@@ -49,6 +47,8 @@
 			<p><a href="#">Placeholder</a></p>
 		  </div>
 	    </div>
+</div>
+
 	  </div>
 	</div>
   </body>
