--- a/contact.html
+++ b/contact.html
@@ -31,69 +31,77 @@
       </div>
     </div> 
 
+    <div class="contact">
 
     <div class="row"> 
-    <div class="col-md-3"> 
-    <h3>President</h3>
+        <div class="col-md-2"> </div>
+    <div class="col-md-2"> 
+    <h4>President</h4>
       <div class="thumbnail">
         <img src="photos/RT.jpg" class="img-circle">
-    <h4>Ryan Taylor</h4>
+    <h5>Ryan Taylor</h5>
       </div>
     </div>
-    <div class="col-md-3"> 
-    <h3>Vice President</h3>
+    <div class="col-md-2"> 
+    <h4>Vice President</h4>
      <div class="thumbnail">
         <img src="photos/Dial.jpg" class="img-circle">
     <p>Blake Dial</p>
       </div>    </div>
-    <div class="col-md-3"> 
-    <h3>Treasurer</h3>
+    <div class="col-md-2"> 
+    <h4>Treasurer</h4>
      <div class="thumbnail">
-        <img src="photos/Sam.jpg">
+        <img src="photos/Sam.jpg" class="img-circle">
     <p>Sam Hunt</p>
       </div>    
     </div>
-    <div class="col-md-3"> 
-    <h3>Phikeia Educator</h3>
+    <div class="col-md-2"> 
+    <h4>Phikeia Educator</h4>
      <div class="thumbnail">
-        <img src="photos/RT.jpg">
+        <img src="photos/Norman.jpg" class="img-circle">
     <p>Norman Ramirez</p>
       </div>
     </div>
+        <div class="col-md-2"> </div>
 
     </div>
 	  
+
        <div class="row"> 
+    <div class="col-md-2"> </div>
+
     <div class="col-md-2"> 
-    <h3>Recruitment Chairman</h3>
+    <h4>Recruitment Chairman</h4>
      <div class="thumbnail">
-        <img src="photos/Jon.jpg">
+        <img src="photos/Jon.jpg" class="img-circle">
     <p>Jonathan Bouwhuis</p>
       </div>
     </div>
     <div class="col-md-2"> 
-    <h3>Philanthropy Chairman</h3>
+    <h4>Philanthropy Chairman</h4>
      <div class="thumbnail">
-        <img src="photos/RT.jpg" class="img-circle">
+        <img src="photos/Remi.jpg" class="img-circle">
     <p>Remington Anderson</p>
       </div>    
     </div>
     <div class="col-md-2"> 
-    <h3>Almuni Secretary</h3>
+    <h4>Almuni Secretary</h4>
      <div class="thumbnail">
-        <img src="photos/Vitone.jpg">
+        <img src="photos/Vitone.jpg" class="img-circle">
     <p>Andrew Vitone</p>
       </div>
     </div>
     <div class="col-md-2"> 
-    <h3>Social Chairman</h3>
+    <h4>Social Chairman</h4>
      <div class="thumbnail">
-        <img src="photos/NickMoore.jpg">
+        <img src="photos/NickMoore.jpg" class="img-circle">
     <p>Nick Moore</p>
       </div>    
     </div>
+        <div class="col-md-2"> </div>
 
     </div>
+</div>
 
     </div>
 	</div>
