--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
           <li><a href="contact.html">Contact</a></li>
           <li><a href="photos.html">Photos</a></li>
           <li><a href="recruitment.html">Recruitment</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
+
         </ul>
       </div>
     </div>
