--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <li><a href="contact.html">Contact</a></li>
           <li><a href="photos.html">Photos</a></li>
           <li><a href="recruitment.html">Recruitment</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
+
         </ul>
       </div>
     </div>
@@ -32,7 +34,7 @@
       </div>
     </div> 
 
-<div class="neighborhood-guides">
+<div class="photos">
 <div class="container">
 <h2>At a glance</h2>
 <p>Texas Beta is a premier organization of men who are leaders on campus, involved philanthropically... etc</p>
@@ -79,6 +81,19 @@
 			<p><a href="#">Placeholder</a></p>
 		  </div>
 	    </div>
+
+      <div class="blue">
+        <div class="row">
+          <div class="col-md-4">
+          </div>
+          <div class="col-md-4">
+            <h3 class="centered">Chapter Address</h3>
+            <p class="centered">2614 Rio Grande St, Austin, TX, 78705</p>
+          </div>
+          
+        </div>
+      </div>
+
 	  </div>
 	</div>
   </body>
