--- a/index.html
+++ b/index.html
@@ -2,37 +2,59 @@
 <html>
 
   <head>
-    <link href="https://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    
-    <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+
+
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </head>
+
 
   <body>
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
+          <img src="photos/logo-2.png" style="width:200px; height:40px;">
+        </ul>
+        <ul class="pull-right">
           <li><a href="index.html">Texas Phi Delt</a></li>
           <li><a href="about.html">About</a></li>
-        </ul>
-        <ul class="pull-left">
           <li><a href="contact.html">Contact</a></li>
           <li><a href="photos.html">Photos</a></li>
           <li><a href="recruitment.html">Recruitment</a></li>
           <li><a href="alumni.html">Alumni</a></li>
-
         </ul>
       </div>
     </div>
 
-    <div class="jumbotron">
+  
+    <div class="headercont">
       <div class="container">
-        <h1>Phi Delta Theta - Texas Beta</h1>
-        <p>Est. 1883</p>
+       <div class="mainheader"> 
+        <h4>Phi Delta Theta </h4>
+        <h1>Texas Beta</h1>
+         </div> 
+         </div>
+         </div>
+
       <!--  <a href="#">Learn More</a>  -->
-      </div>
-    </div> 
+ 
+
+
+
+
+
+
+
 
 <div class="photos">
 <div class="container">
@@ -64,6 +86,7 @@
 </div>
 </div>
 
+<div class="container">
 		<div class="row">
 	      <div class="col-md-4">
 			<h3>Friendship</h3>
@@ -81,14 +104,13 @@
 			<p><a href="#">Placeholder</a></p>
 		  </div>
 	    </div>
-
+</div>
       <div class="blue">
         <div class="row">
           <div class="col-md-4">
           </div>
           <div class="col-md-4">
-            <h3 class="centered">Chapter Address</h3>
-            <p class="centered">2614 Rio Grande St, Austin, TX, 78705</p>
+            <img src="photos/white-logo.png" style="width:70px;height:70px">
           </div>
           
         </div>
